@@ -1,3 +1,8 @@
+2002-08-17  Christopher Armstrong  <radix@twistedmatrix.com>
+
+	* Releasing Twisted 0.99.0rc8, with a fix to tap2deb and 
+	slightly updated options documentation.
+
 2002-08-16  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* Releasing Twisted 0.99.0rc6, with some fixes to setup.py
